Fix production CORS: route mg-api image assets through CORS proxy
In production (GitHub Pages), mg-api.ariedam.fr serves sprite images
without CORS headers, blocking fetch() calls from the browser.

- proxyUrl() now routes all mg-api.ariedam.fr URLs through VITE_CORS_PROXY
  in production builds (magicgarden.gg URLs are normalised first)
- deploy.yml sets VITE_CORS_PROXY to corsproxy.io by default; override via
  the VITE_CORS_PROXY repository variable for a self-hosted proxy
- index.html: add empty favicon link to suppress the /favicon.ico 404

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,12 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          # Route mg-api.ariedam.fr image assets through a CORS proxy so the
+          # GitHub Pages static host can fetch cross-origin sprites.
+          # Override with your own proxy (e.g. a Cloudflare Worker) via a
+          # repository secret or by editing this value directly.
+          VITE_CORS_PROXY: ${{ vars.VITE_CORS_PROXY || 'https://corsproxy.io/?url=' }}
 
       - uses: actions/upload-pages-artifact@v3
         with:
